--- a/src/Interfaz/Diseño.form
+++ b/src/Interfaz/Diseño.form
@@ -365,6 +365,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="Id">
               <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="IdMouseClicked"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="IdActionPerformed"/>
               </Events>
               <Constraints>
